# 295capstone-assembly

./: .env.deploy  .env.deploy.example  .env.local.example  .env.production.example  .env.remote.example  .env.secure  .gitattributes  .gitignore  =1.6.0  AGENT_PROMPT_INTERACTIVE_COMPONENTS.md  API_REFERENCE.md  API_SCANNER_CONCEPT.md  API_TYPES.ts  ARCHITECTURE.md  ARCHITECTURE_COMPARISON.md  AWS_DEPLOYMENT.md  AWS_SCANNER_FIX.md  BACKEND-INTEGRATION-SPIKE.md  CEDAR-INTEGRATION-SPIKE.md  CLAUDE.md  CONTAINERIZED_DEPLOYMENT.md  CONTAINERIZED_SCANNERS.md  DEPLOYMENT_COMPARISON.md  DEPLOYMENT_STATUS.md  Dockerfile  Dockerfile.railway  Dockerfile.railway.nginx  Dockerfile.railway.simple  Dockerfile.railway.web  EC2_DEPLOYMENT_CHECKLIST.md  EC2_DEPLOYMENT_TROUBLESHOOTING.md  GENERATED_CLIENT_USAGE.md  IMPLEMENTATION_STATUS.md  KUBERNETES_DEPLOYMENT.md  KUBERNETES_QUICK_START.md  LIGHTSAIL_DEPLOYMENT.md  LOVABLE_INTEGRATION_GUIDE.md  MIGRATION-PLAN.md  MULTI_SCANNER_ARCHITECTURE.md  ORCHESTRATION.md  (+54 more)
scanner-service/: Dockerfile  docker-compose-multi-scanner.yml  pyproject.toml  requirements.txt
scanner-service/examples/: openapi_demo.yaml
scanner-service/results/: findings.json  report.html
scanner-service/scanner/: __init__.py
scanner-service/web-api/: ADDING_NEW_SCANNERS.md  Dockerfile  Dockerfile.secure  aws_scanner.py  complete_test_login.json  database.py  database_orm.py  final_login.json  final_s3_token.txt  final_token.txt  hybrid_queue.py  job_queue.py  kubernetes_scanner.py  main.py  main_jobqueue_only.py  main_secure.py  models.py  plugin_api.py  railway.json  (+7 more)
(+425 files in other folders)
